[tool.poetry]
name = "outputfilter"
version = "0.0.1"
description = ""
authors = ["{Your Name} <{your@example.com}>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
maturin = ">=0.14"

[build-system]
requires = ["maturin>=0.14"]
build-backend = "maturin"

[project]
name = "outputfilter"
requires-python = ">=3.9,<3.10"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]


